--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@better-auth/cli": "^1.3.7",
     "@hookform/resolvers": "^5.2.1",
     "@prisma/client": "^6.12.0",
+    "@radix-ui/react-alert-dialog": "^1.1.15",
     "@radix-ui/react-avatar": "^1.1.10",
     "@radix-ui/react-dialog": "^1.1.15",
     "@radix-ui/react-dropdown-menu": "^2.1.16",
