--- a/package.json
+++ b/package.json
@@ -32,7 +32,7 @@
     "cmdk": "^1.1.1",
     "date-fns": "^4.1.0",
     "lucide-react": "^0.536.0",
-    "next": "15.4.1",
+    "next": "^15.4.8",
     "next-intl": "^4.4.0",
     "next-themes": "^0.4.6",
     "react": "19.1.0",
